--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,6 +3,7 @@
 <!-- <h1>Home Page</h1> -->
 {% for post in posts %}
 <article class="media content-section">
+	<img class="rounded-circle article-img" src = "{{post.author.profile.image.url}}">
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.question }}</a>
