--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,5 @@
 {% extends "home/base.html" %}
+{% load crispy_forms_tags %}
 {% if messages %}
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
@@ -11,7 +12,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Log In</legend>
-                {{ form }}
+                {{ form | crispy}}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Log In</button>
