--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -15,15 +15,15 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/main.css' %}">
 
     {% if title %}
-    <title>Django Blog - {{ title }}</title>
+    <title>CodePanda - {{ title }}</title>
     {% else %}
-    <title>CodesPanda</title>
+    <title>CodePanda</title>
     {% endif %}
 
 </head>
 
 <body>
-    <header class="site-header">
+    <!-- <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
                 <a class="navbar-brand mr-4" href="{% url 'home' %}">CodePanda</a>
@@ -36,7 +36,6 @@
                         <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
                         <a class="nav-item nav-link" href="{% url 'home-about' %}">About</a>
                     </div>
-                    <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                     	{% if user.is_authenticated %}
                     		<a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
@@ -49,10 +48,26 @@
                 </div>
             </div>
         </nav>
+    </header> -->
+
+    <header>
+        <img class="logo" src="{% static 'home/images/logo-cropped.png' %}" alt="logo">
+        <nav>
+            <ul class="nav_links">
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'profile' %}">Profile</a></li>
+                    <li><a href="{% url 'logout' %}">Log Out</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+        <!-- <a href="#" class="cta"><button>About</button></a> -->
     </header>
 
 
-
+    <div class="container-bg">
     <main role="main" class="container">
         <div class="row">
             <div class="col-md-8">
@@ -66,20 +81,19 @@
                 {% block content %}{% endblock %}
             </div>
             <div class="col-md-4">
-                <!-- <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                <div class="content-section">
+                    <p class='text-muted'>Hot Stuff
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc</li>
+                        <li class="list-group-item list-group-item-dark">Latest Posts</li>
+                        <li class="list-group-item list-group-item-dark">Announcements</li>
+                        <li class="list-group-item list-group-item-dark">Calendars</li>
                     </ul>
                     </p>
-                </div> -->
+                </div>
             </div>
         </div>
     </main>
+    </div>
 
 
     <!-- Optional JavaScript -->
