--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,11 +3,12 @@
 <!-- <h1>Home Page</h1> -->
 {% for post in posts %}
 <article class="media content-section">
-	<img class="rounded-circle article-img" src = "{{post.author.profile.image.url}}">
+    <img class="rounded-circle article-img" src="{{  post.author.profile.image.url  }}">
+    <!-- post.user_ques.profile.image.url  -->
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.question }}</a>
-            <small class="text-muted">{{post.data_posted }}</small>
+            <small class="text-muted">{{post.data_posted | date:"F d, Y" }}</small>
         </div>
         <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
         <!-- <p class="article-content">{{ post.content }}</p> -->
