--- a/home/static/home/main.css
+++ b/home/static/home/main.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -143,4 +145,8 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+
+.pp {
+  color: white;
 }
