updated readme and minor ui changes

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -54,11 +54,11 @@
             </div>
             <div class="col-md-3">
                 <div class="content-section">
-                    <p class='text-muted'>Hot Stuff
+                    <p class='text-muted d-flex justify-content-center'>Hot Stuff
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-dark">Latest Posts</li>
+                        <li class="list-group-item list-group-item-dark">Popular Questions</li>
+                        <li class="list-group-item list-group-item-dark">Top Users</li>
                         <li class="list-group-item list-group-item-dark">Announcements</li>
-                        <li class="list-group-item list-group-item-dark">Calendars</li>
                     </ul>
                     </p>
                 </div>
