--- a/home/static/home/main.css
+++ b/home/static/home/main.css
@@ -9,7 +9,7 @@
   color: #edf0f1;
 }
 
-li, a, button {
+li, a, button, p {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -110,8 +110,10 @@ a.article-title:hover {
 }
 
 .article-content {
+  margin-top: 10px;
   white-space: pre-line;
 }
+
 
 .article-img {
   height: 65px;
