--- a/home/templates/home/question_detail.html
+++ b/home/templates/home/question_detail.html
@@ -1,42 +1,41 @@
 {% extends "home/base.html" %}
 {% block content %}
-{% for ques in questions %}
 <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ ques.user_ques.profile.image.url }}">
+    <img class="rounded-circle article-img" src="{{  object.user_ques.profile.image.url  }}">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2 article-title" href="#">{{ ques.title }}</a>
-            <small class="text-muted">{{ ques.date_posted | date:"F d, Y" }}</small>
+            <a class="mr-2" href="#">{{ object.title }}</a>
+            <small class="text-muted">{{ object.date_posted | date:"F d, Y" }}</small>
         </div>
-        <h2>
-            <p class="article-content" href="#">{{ ques.question }}</p>
-        </h2>
+        <h2><a class="article-title" href="#">{{ object.question }}</a></h2>
+
+
         {% for answer in ques.answer_set.all %}
         <article class="media">
-            <img class="rounded-circle article-img" src="{{  answer.user_ans.profile.image.url  }}">
+            <img class="rounded-circle article-img" src="{{  object.user_ans.profile.image.url  }}">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ answer.user_ans|title }}</a>
-                    <small class="text-muted">{{ answer.date_posted | date:"F d, Y" }}</small>
+                    <a class="mr-2" href="#">{{ object.user_ans|title }}</a>
+                    <small class="text-muted">{{ object.date_posted | date:"F d, Y" }}</small>
                 </div>
 
                 <div class="row mt-3">
                     <div class="col-md-1" style="font-size: 20px; color:#606060; text-align: center;">
                         <i class="fa fa-arrow-up"></i>
-                        <span>{{ answer.votes }}</span>
+                        <span>{{ object.votes }}</span>
                         <i class="fa fa-arrow-down"></i>
                     </div>
 
                     <article class="media content-section col-md-10">
-                        <pre class="prettyprint pp">{{ answer.answer }}</pre>
+                        <pre class="prettyprint pp">{{ object.answer }}</pre>
                     </article>
 
                 </div>
 
         </article>
         {% endfor %}
+
+
     </div>
 </article>
-
-{% endfor %}
 {% endblock content %}
