--- a/home/static/home/main.css
+++ b/home/static/home/main.css
@@ -2,19 +2,19 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css");
 
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  padding: 0; */
   background-color: #24252A;
   color: #edf0f1;
+  font-family: "Montserrat", sans-serif;
 }
 
 li, a, button, p {
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 16px;
   color: #edf0f1;
-  /* text-decoration: none; */
+  text-decoration: none;
 }
 
 header {
