--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -52,6 +52,7 @@
                 {% block content %}{% endblock %}
             </div>
             <div class="col-md-3">
+                {% if user.is_authenticated %}
                 <div class="content-section">
                     <p class='text-muted d-flex justify-content-center'>Hot Stuff
                     <ul class="list-group">
@@ -61,6 +62,7 @@
                     </ul>
                     </p>
                 </div>
+                {% endif %}
             </div>
         </div>
     </main>
