--- a/home/templates/home/question_confirm_delete.html
+++ b/home/templates/home/question_confirm_delete.html
@@ -11,7 +11,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Delete Post</legend>
-                <h1>Are you sure you want to delete the question "{{ object.question }}" </h1>
+                <h2>Are you sure you want to delete the question "{{ object.title }}" </h2>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
