--- a/home/templates/home/question_form.html
+++ b/home/templates/home/question_form.html
@@ -13,6 +13,7 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Question Post</legend>
                 {{ form | crispy}}
+                 <small class="text-muted mt-auto">Enter tags in csv format like: array, math, easy</small>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Post</button>
