--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -26,9 +26,9 @@
 
                 <div class="row mt-3">
                     <div class="col-md-1 arrow-style">
-                        <i class="fa fa-arrow-up"></i>
+                        <a class="voting" value="upvote" role="button"><i class="fa fa-arrow-up"></i></a>
                         <span>{{ answer.votes }}</span>
-                        <i class="fa fa-arrow-down"></i>
+                        <a class="voting" value="downvote" role="button"><i class="fa fa-arrow-down"></i></a>
                     </div>
 
                     <article class="media answer-section col-md-11">
