--- a/home/static/home/main.css
+++ b/home/static/home/main.css
@@ -61,7 +61,7 @@ header {
 }
 
 .post-button:hover {
-  background-color: rgba(0, 136, 169, 0.8); */
+  background-color: rgba(0, 136, 169, 0.8);
 }
 
 /* h1, h2, h3, h4, h5, h6 {
