--- a/home/static/home/main.css
+++ b/home/static/home/main.css
@@ -188,3 +188,21 @@ a.btn.btn-primary {
   color: #428bca;
   text-decoration: none;
 }
+
+.searchbar {
+  width: 300px;
+  height: 50px;
+  border: 1px solid;
+}
+
+.top-bar {
+  list-style: none;
+  border: 1px solid;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.top-bar-contents {
+  justify-content: start;
+  align-items: center;
+}
