--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,6 +1,18 @@
 {% extends "home/base.html" %}
 {% block content %}
 {% for question in questions %}
+<div class="container container-bg top-bar">
+      <div class="d-flex flex-row top-bar-contents">
+          <img class="rounded-circle article-img" src="{{ user.profile.image.url }}">
+          <form class="d-flex searchbar" method="POST" action="{% url 'search-title' %}">
+              {% csrf_token %}
+              <input name="searched" class ="form-control me-2" type="search" placeholder="search title">
+              <button class="btn btn-outline-secondary" type="submit">Search</button>
+          </form>
+          <li><a href="{% url 'question-create' %}"><button class="post-button">Post a Question</button></a><li>
+      </div>
+</div>
+
 <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ question.user_ques.profile.image.url }}">
     <div class="media-body">
@@ -20,16 +32,15 @@
             <img class="rounded-circle article-img" src="{{  answer.user_ans.profile.image.url  }}">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ answer.user_ans|title }}</a>
+                    <a class="mr-2" href="#">{{ answer.user_ans | title }}</a>
                     <small class="text-muted date">{{ answer.date_posted | date:"F d, Y" }}</small>
                 </div>
 
                 <div class="row mt-3">
-                  <span id="votes" data-value="{{ answer.id }}"></span>
                     <div class="col-md-1 arrow-style">
-                        <a class="voting voteaction" value="upvote" role="button"><i class="fa fa-arrow-up"></i></a>
-                        <span id="votes_for_answer">{{ answer.votes }}</span>
-                        <a class="voting voteaction" value="downvote" role="button"><i class="fa fa-arrow-down"></i></a>
+                        <a class="voting voteaction" data-value="{{ answer.id }}" value="upvote" role="button"><i class="fa fa-arrow-up"></i></a>
+                        <span class="votes_for_answer">{{ answer.votes }}</span>
+                        <a class="voting voteaction" data-value="{{ answer.id }}" value="downvote" role="button"><i class="fa fa-arrow-down"></i></a>
                     </div>
 
                     <article class="media answer-section col-md-11">
@@ -68,8 +79,10 @@
   $(document).ready(function () {
     $('.voteaction').on("click", function (e) {
       e.preventDefault();
-      var answerid = document.getElementById('votes').getAttribute('data-value');
+      var answerid = $(this).attr("data-value")
       var button = $(this).attr("value");
+      var $that = $(this);
+      console.log(answerid)
       $.ajax({
         type: 'POST',
         url: {% url 'voteans' %},
@@ -80,7 +93,7 @@
           button: button
         },
         success: function (json) {
-          document.getElementById("votes_for_answer").innerHTML = json['votes']
+          $that.siblings('span').html(json.votes)
         },
         error: function (xhr, errmsg, err) {}
       });
