--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -21,8 +21,17 @@
             <small class="text-muted mt-2">Posted by <a href="#">{{ question.user_ques | title }}</a></small>
             <small class="text-muted date">{{ question.date_posted | date:"F d, Y" }}</small>
         </div>
-
-        <p class="article-content">{{ question.question }}</p>
+                <div class="row mt-3">
+                  <span id="votesq" data-value="{{ question.id }}"></span>
+                    <div class="col-md-1 arrow-style">
+                        <a class="voting voteactionq" value="upvote" role="button"><i class="fa fa-arrow-up"></i></a>
+                        <span id="votes_for_question">{{ question.votes }}</span>
+                        <a class="voting voteactionq" value="downvote" role="button"><i class="fa fa-arrow-down"></i></a>
+                    </div>
+                  <article class="media answer-section col-md-11">
+                    <p class="article-content">{{ question.question }}</p>
+                  </article>
+                </div>
         {% for tag in question.tags_ques %}
             <a class="btn btn-primary" href="#" role="button">{{ tag }}</a>
         {% endfor %}
@@ -98,6 +107,27 @@
         error: function (xhr, errmsg, err) {}
       });
     });
+
+    $('.voteactionq').on("click", function (e) {
+      e.preventDefault();
+      var questionid = document.getElementById('votesq').getAttribute('data-value');
+      var button = $(this).attr("value");
+      $.ajax({
+        type: 'POST',
+        url: {% url 'voteques' %},
+        data: {
+          questionid: questionid,
+          csrfmiddlewaretoken: '{{ csrf_token }}',          
+          action: 'votes',
+          button: button
+        },
+        success: function (json) {
+          document.getElementById("votes_for_question").innerHTML = json['votes']
+        },
+        error: function (xhr, errmsg, err) {}
+      });
+    });
+
   });
 </script>
 
