--- a/home/templates/home/question_detail.html
+++ b/home/templates/home/question_detail.html
@@ -39,11 +39,26 @@
                     <article class="media content-section col-md-10">
                         <pre class="prettyprint pp">{{ answer.answer }}</pre>
                     </article>
-
                 </div>
-
         </article>
         {% endfor %}
     </div>
 </article>
+<button class="btn btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#replyBox{{comment.sno}}" aria-expanded="false" aria-controls="replyBox{{comment.sno}}">
+                    Reply
+                </button>
+                <div class="collapse" id="replyBox{{comment.sno}}">
+                    <div class="card card-body my-2">
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="comment">Post a reply </label>
+                                <input type="text" class="form-control" name="comment" placeholder="Enter comment here">
+                                <input type="hidden" name="parentSno" value="{{comment.sno}}">
+                            </div>
+                            <input type="hidden" name="postSno" value="{{post.sno}}">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
 {% endblock content %}
